Patched the desktop definition
Patched the desktop definition by specifying an application name so that the built and installed version of this package is displayed in the applications menu by default.

Signed-off-by: ThomiHaow <ThomiHaow@mail.com>

--- a/qubes-doc.desktop
+++ b/qubes-doc.desktop
@@ -1,4 +1,5 @@
 [Desktop Entry]
+Name=Qubes OS Offline Documentation
 Type=Application
 Exec=evince /usr/share/qubes/qubes-doc.pdf
 Icon=qubes-manager
